cduce/tests/full/good/lazy.t/run.t
  $ cduce --verbose --compile lazy.cd
  val f : [  ] -> Int
  $ cduce --run lazy.cdo
  EVAL
