cduce/tests/full/bad/no_ocamliface.t/run.t
  $ cduce --verbose --compile no_ocamliface.cd
  $ cduce --no ocaml --mlstub no_ocamliface.cdo
  Fatal error: no support for the OCaml interface.
  [2]
